--- a/app/globals.css
+++ b/app/globals.css
@@ -112,3 +112,26 @@ h1 {
 .font-bai-jamjuree {
   font-family: var(--font-bai-jamjuree);
 }
+
+/* Scrollbar */
+/* Scrollbar styles for WebKit browsers (Chrome, Edge, Safari) */
+::-webkit-scrollbar {
+  width: 8px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--color-primary);
+  border-radius: 8px;
+}
+
+/* Optional: scrollbar track for better contrast */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Scrollbar styles for Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #ced7ff20 transparent;
+}
