add more animations

--- a/app/globals.css
+++ b/app/globals.css
@@ -143,6 +143,27 @@
     }
   }
 
+  @keyframes drop-out {
+    0% {
+      transform: translateY(0%);
+      opacity: 1;
+    }
+    100% {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+  }
+  @keyframes drop-in {
+    0% {
+      transform: translateY(100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0%);
+      opacity: 1;
+    }
+  }
+
   /* Button glow animation */
   .animate-cyan-glow {
     animation: cyan-glow 3s cubic-bezier(0.4, 0, 0.6, 1) infinite;
@@ -204,12 +225,22 @@
     animation-delay: 0.4s;
   }
 
+  /* Arrow button slide animation */
   .animate-slide-in {
     animation: slide-in-from-left 0.3s ease-out forwards;
     will-change: transform, opacity;
   }
   .animate-slide-out-and-return {
     animation: slide-out-and-return 0.6s ease-out forwards;
+    will-change: transform, opacity;
+  }
+
+  .animate-drop-out {
+    animation: drop-out 0.3s ease-in forwards;
+    will-change: transform, opacity;
+  }
+  .animate-drop-in {
+    animation: drop-in 0.3s ease-out forwards;
     will-change: transform, opacity;
   }
 }
